--- a/src/pages/docs/visibility.mdx
+++ b/src/pages/docs/visibility.mdx
@@ -14,39 +14,39 @@ import { Disabling } from '@/components/Disabling'
 
 export const classes = { plugin }
 
-## Visible
-
-Use `visible` to make an element visible. This is mostly useful for undoing the `invisible` utility at different screen sizes.
-
-```html
-<template preview class="flex justify-center p-4">
-  <div class="bg-gray-400 w-32 h-12"></div>
-  <div class="visible bg-gray-600 w-32 h-12"></div>
-  <div class="bg-gray-400 w-32 h-12"></div>
-</template>
-
-<div class="flex justify-center">
-  <div class="bg-gray-400"></div>
-  <div class="bg-gray-600 visible"></div>
-  <div class="bg-gray-400"></div>
-</div>
-```
-
 ## Invisible
 
 Use `invisible` to hide an element, but still maintain its place in the DOM, affecting the layout of other elements (compare with `.hidden` from the [display](/docs/display#hidden) documentation).
 
-```html
-<template preview class="flex justify-center p-4">
-  <div class="bg-gray-400 w-32 h-12"></div>
-  <div class="invisible bg-gray-600 w-32 h-12"></div>
-  <div class="bg-gray-400 w-32 h-12"></div>
+```html indigo
+<template preview class="flex justify-center p-10 space-x-4">
+  <div class="rounded-md bg-indigo-500 w-32 h-16 flex items-center justify-center text-white text-3xl font-extrabold">1</div>
+  <div class="invisible rounded-md bg-indigo-500 w-32 h-16 flex items-center justify-center text-white text-3xl font-extrabold">2</div>
+  <div class="rounded-md bg-indigo-500 w-32 h-16 flex items-center justify-center text-white text-3xl font-extrabold">3</div>
 </template>
 
-<div class="flex justify-center">
-  <div class="bg-gray-400"></div>
-  <div class="bg-gray-600 invisible"></div>
-  <div class="bg-gray-400"></div>
+<div class="flex justify-center space-x-4">
+  <div>1</div>
+  <div class="**invisible** ...">2</div>
+  <div>3</div>
+</div>
+```
+
+## Visible
+
+Use `visible` to make an element visible. This is mostly useful for undoing the `invisible` utility at different screen sizes.
+
+```html purple
+<template preview class="flex justify-center p-10 space-x-4">
+  <div class="rounded-md bg-purple-500 w-32 h-16 flex items-center justify-center text-white text-3xl font-extrabold">1</div>
+  <div class="visible rounded-md bg-purple-500 w-32 h-16 flex items-center justify-center text-white text-3xl font-extrabold">2</div>
+  <div class="rounded-md bg-purple-500 w-32 h-16 flex items-center justify-center text-white text-3xl font-extrabold">3</div>
+</template>
+
+<div class="flex justify-center space-x-4">
+  <div>1</div>
+  <div class="**visible** ...">2</div>
+  <div>3</div>
 </div>
 ```
 
