loose ends improvements in flex examples

--- a/src/pages/docs/flex.mdx
+++ b/src/pages/docs/flex.mdx
@@ -22,23 +22,23 @@ Use `flex-initial` to allow a flex item to shrink but not grow, taking into acco
 <template preview>
   <p class="text-sm text-indigo-600">Items don't grow when there's extra space</p>
   <div class="mt-2 flex space-x-4">
-    <div class="flex-initial rounded-md bg-indigo-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-initial rounded-md bg-indigo-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Short
     </div>
-    <div class="flex-initial rounded-md bg-indigo-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-initial rounded-md bg-indigo-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Medium length
     </div>
   </div>
 
   <p class="mt-8 text-sm text-indigo-600">Items shrink if possible when needed</p>
   <div class="mt-2 flex space-x-4">
-    <div class="flex-initial rounded-md bg-indigo-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-initial rounded-md bg-indigo-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Short
     </div>
-    <div class="flex-initial rounded-md bg-indigo-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-initial rounded-md bg-indigo-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Medium length
     </div>
-    <div class="flex-initial rounded-md bg-indigo-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-initial rounded-md bg-indigo-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ad labore ipsam, aut rem quo repellat esse tempore id, quidem
     </div>
   </div>
@@ -65,26 +65,26 @@ Use `flex-1` to allow a flex item to grow and shrink as needed, ignoring its ini
 <template preview>
   <p class="text-sm text-fuchsia-600">Default behavior</p>
   <div class="mt-2 flex space-x-4">
-    <div class="rounded-md bg-fuchsia-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="rounded-md bg-fuchsia-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Short
     </div>
-    <div class="rounded-md bg-fuchsia-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="rounded-md bg-fuchsia-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Medium length
     </div>
-    <div class="rounded-md bg-fuchsia-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="rounded-md bg-fuchsia-500 text-white font-semibold flex items-center justify-center py-3 px-6">
         Significantly larger amount of content
     </div>
   </div>
 
   <p class="mt-8 text-sm text-fuchsia-600">With <code>.flex-1</code></p>
   <div class="mt-2 flex space-x-4">
-    <div class="flex-1 rounded-md bg-fuchsia-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-1 rounded-md bg-fuchsia-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Short
     </div>
-    <div class="flex-1 rounded-md bg-fuchsia-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-1 rounded-md bg-fuchsia-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Medium length
     </div>
-    <div class="flex-1 rounded-md bg-fuchsia-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-1 rounded-md bg-fuchsia-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Significantly larger amount of content
     </div>
   </div>
@@ -111,26 +111,26 @@ Use `flex-auto` to allow a flex item to grow and shrink, taking into account its
 <template preview>
   <p class="text-sm text-light-blue-600">Default behavior</p>
   <div class="mt-2 flex space-x-4">
-    <div class="rounded-md bg-light-blue-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="rounded-md bg-light-blue-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Short
     </div>
-    <div class="rounded-md bg-light-blue-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="rounded-md bg-light-blue-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Medium length
     </div>
-    <div class="rounded-md bg-light-blue-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="rounded-md bg-light-blue-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Significantly larger amount of content
     </div>
   </div>
 
   <p class="mt-8 text-sm text-light-blue-600">With <code>.flex-auto</code></p>
   <div class="mt-2 flex space-x-4">
-    <div class="flex-auto rounded-md bg-light-blue-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-auto rounded-md bg-light-blue-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Short
     </div>
-    <div class="flex-auto rounded-md bg-light-blue-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-auto rounded-md bg-light-blue-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Medium length
     </div>
-    <div class="flex-auto rounded-md bg-light-blue-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-auto rounded-md bg-light-blue-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Significantly larger amount of content
     </div>
   </div>
@@ -156,13 +156,13 @@ Use `flex-none` to prevent a flex item from growing or shrinking:
 ```html emerald
 <template preview>
   <div class="flex space-x-4">
-    <div class="flex-1 rounded-md bg-emerald-300 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-1 rounded-md bg-emerald-300 text-white font-semibold flex items-center justify-center py-3 px-6">
       Item that can grow or shrink if needed
     </div>
-    <div class="flex-none rounded-md bg-emerald-500 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-none rounded-md bg-emerald-500 text-white font-semibold flex items-center justify-center py-3 px-6">
       Item that cannot grow or shrink
     </div>
-    <div class="flex-1 rounded-md bg-emerald-300 text-white font-extrabold flex items-center justify-center py-3 px-6">
+    <div class="flex-1 rounded-md bg-emerald-300 text-white font-semibold flex items-center justify-center py-3 px-6">
       Item that can grow or shrink if needed
     </div>
   </div>
