--- a/src/pages/docs/align-items.mdx
+++ b/src/pages/docs/align-items.mdx
@@ -55,10 +55,10 @@ Use `items-center` to align items along the center of the container's cross axis
 
 ```html rose
 <template preview class="p-4">
-  <div class="flex items-center h-32 -m-2">
-    <div class="flex-1 h-12 rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
-    <div class="flex-1 h-12 rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">2</div>
-    <div class="flex-1 h-12 rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">3</div>
+  <div class="flex items-center p-4 space-x-4 bg-stripes bg-stripes-rose-500 rounded-lg">
+    <div class="flex-1 py-2 rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
+    <div class="flex-1 py-8 rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">2</div>
+    <div class="flex-1 py-5 rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">3</div>
   </div>
 </template>
 
@@ -75,10 +75,10 @@ Use `items-end` to align items to the end of the container's cross axis:
 
 ```html purple
 <template preview class="p-4">
-  <div class="flex items-end h-32 -m-2">
-    <div class="flex-1 h-12 rounded-md bg-purple-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
-    <div class="flex-1 h-12 rounded-md bg-purple-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">2</div>
-    <div class="flex-1 h-12 rounded-md bg-purple-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">3</div>
+  <div class="flex items-end p-4 space-x-4 bg-stripes bg-stripes-purple-500 rounded-lg">
+    <div class="flex-1 py-2 rounded-md bg-purple-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
+    <div class="flex-1 py-8 rounded-md bg-purple-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">2</div>
+    <div class="flex-1 py-5 rounded-md bg-purple-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">3</div>
   </div>
 </template>
 
@@ -95,7 +95,7 @@ Use `items-baseline` to align items along the container's cross axis such that a
 
 ```html emerald
 <template preview class="p-4">
-  <div class="flex items-baseline h-32 -m-2">
+  <div class="flex items-baseline p-4 space-x-4 bg-stripes bg-stripes-emerald-500 rounded-lg">
     <div class="flex-1 pt-4 pb-6 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
     <div class="flex-1 pt-6 pb-10 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">2</div>
     <div class="flex-1 pt-8 pb-4 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">3</div>
@@ -103,9 +103,9 @@ Use `items-baseline` to align items along the container's cross axis such that a
 </template>
 
 <div class="flex **items-baseline** ...">
-  <div class="text-2xl ...">1</div>
-  <div class="text-6xl ...">2</div>
-  <div class="text-4xl ...">3</div>
+  <div class="pt-4 pb-6 ...">1</div>
+  <div class="pt-6 pb-10 ...">2</div>
+  <div class="pt-8 pb-4 ...">3</div>
 </div>
 ```
 
